--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"],
+      "@screens/*": ["screens/*"],
+      "@components/*": ["components/*"]
+    }
+  },
+  "exclude": ["node_modules", "babel.config.js"]
 }
